--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,6 @@ body {
   font-family: 'Inter', sans-serif;
   text-align: center;
   border: 2px solid #33AF53;
-  /* border-image-source: linear-gradient(180deg, rgba(51,175,83,1) 15%, rgba(0,0,0,0) 100%); */
-  /* border-image-slice: 1; */
   border-radius: 12px;
 }
 
@@ -144,4 +142,8 @@ body {
 
 .grid_dummy-none {
   border: none;
+}
+
+.grid_dummy-bottom {
+  border-bottom: #33AF53 1px solid;
 }
