--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,6 @@ body {
   background-image: radial-gradient(circle, rgba(51,175,83,1) 10%, rgba(0,0,0,0) 90%);
 }
 
-.hero {
-  background-color: #171717e7;
-  background-image: url('./assets/BG.gif');
-  background-size: cover;
-  background-blend-mode: multiply;
-}
-
 .card {
   display: flex;
   justify-content: center;
@@ -74,22 +67,21 @@ body {
 }
 
 .button_grid {
-  border-top: #33AF53 solid 1px;
-  border-bottom: #33AF53 solid 1px;
-  border-inline: #33AF53 solid 1px;
+  border-top: #33af5264 solid 1px;
+  border-bottom: #33af5264 solid 1px;
+  border-inline: #33af5264 solid 1px;
 
 }
 
 .grid_dummy {
-  border-top: #33AF53 solid 1px;
-  border-bottom: #33AF53 solid 1px;
+  border-top: #33af5264 solid 1px;
+  border-bottom: #33af5264 solid 1px;
 
 }
 
 .text_grid {
-  border-bottom: #33AF53 solid 1px;
-  border-bottom: #33AF53 solid 1px;
-  border-inline: #33AF53 solid 1px;
+  border-bottom: #33af5264 solid 1px;
+  border-inline: #33af5264 solid 1px;
 }
 
 .grid_cont {
@@ -97,47 +89,13 @@ body {
 }
 
 .stats_grid {
-  border-bottom: #33AF53 solid 1px;
-  border-inline: #33AF53 solid 1px;
-}
-
-.sticky_container {
-  height: 500dvh;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-.sticky_card {
-  width: 99vw;
-  height: 100vh;
-  box-sizing: border-box;
-  padding-inline: 15%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  position: sticky;
-  top: 0;
-}
-
-.underline {
-  width: 70%;
-  height: 2px;
-  background-color: #33AF53;
-}
-
-
-.widhttt {
-  width: 99vw;
+  border-bottom: #33af5264 solid 1px;
+  border-inline: #33af5264 solid 1px;
 }
 
 .icon-grid {
-  border-right: 1px solid #33AF53;
-  border-bottom: 1px solid #33AF53;
+  border-right: 1px solid #33af5264;
+  border-bottom: 1px solid #33af5264;
 }
 
 .grid_dummy-none {
@@ -145,5 +103,18 @@ body {
 }
 
 .grid_dummy-bottom {
-  border-bottom: #33AF53 1px solid;
+  border-bottom: #33af5264 1px solid;
+}
+
+
+.blob {
+  filter: blur(70px);
+}
+
+.blob_3 {
+  filter:blur(50px);
+}
+
+.blur-el {
+  filter: blur(50px);
 }
