--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ body {
   filter: blur(50px);
 }
 
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
 
 .left_align {
   left: 27%;
