--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,7 @@ body {
 }
 }
 
+
 @media only screen and (max-width: 1024px) {
    .navbar {
     display: flex;
@@ -189,3 +190,8 @@ body {
     grid-template-rows: 1fr 1fr 1fr;
    }
 } 
+
+.bg_sim {
+  background-image: url('./assets/sim_vertex.png');
+  background-size: contain;
+}
